translatorsGenerator/src/main/java/ru/drozdov/antlrgen/GrammarParser.java
// Generated from /Users/glebdrozdov/IdeaProjects/translation-methods/translatorsGenerator/src/main/antlrgrammar/Grammar.g4 by ANTLR 4.7

    package ru.drozdov.antlrgen;
    import ru.drozdov.generator.ParsedGrammar;
    import  ru.drozdov.generator.tokens.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
    import org.antlr.v4.runtime.tree.*;
import java.util.List;
    import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUAL=1, RETURNS=2, COLON=3, SEMICOLON=4, LBRACKET=5, RBRACKET=6, LCBRACKET=7, 
		RCBRACKET=8, LSBRACKET=9, RSBRACKET=10, COMMA=11, OR=12, GRAMMARWORD=13, 
		TERMINAL=14, NOTTERMINAL=15, STRING=16, JAVA_CODE=17, CLASS_NAME=18, IN_VALUE=19, 
		WS=20;
	public static final int
		RULE_start = 0, RULE_terms = 1, RULE_term = 2, RULE_notterms = 3, RULE_notterm = 4, 
		RULE_arguments = 5, RULE_argument = 6, RULE_type = 7, RULE_productionsCommon = 8, 
		RULE_productions = 9, RULE_production = 10, RULE_tokenss = 11, RULE_token = 12;
	public static final String[] ruleNames = {
		"start", "terms", "term", "notterms", "notterm", "arguments", "argument", 
		"type", "productionsCommon", "productions", "production", "tokenss", "token"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'returns'", "':'", "';'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "','", "'|'", "'grammar'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EQUAL", "RETURNS", "COLON", "SEMICOLON", "LBRACKET", "RBRACKET", 
		"LCBRACKET", "RCBRACKET", "LSBRACKET", "RSBRACKET", "COMMA", "OR", "GRAMMARWORD", 
		"TERMINAL", "NOTTERMINAL", "STRING", "JAVA_CODE", "CLASS_NAME", "IN_VALUE", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public ParsedGrammar parsedGrammar;
		public Token CLASS_NAME;
		public Token NOTTERMINAL;
		public NottermsContext notterms;
		public TermsContext terms;
		public TerminalNode GRAMMARWORD() { return getToken(GrammarParser.GRAMMARWORD, 0); }
		public TerminalNode CLASS_NAME() { return getToken(GrammarParser.CLASS_NAME, 0); }
		public TerminalNode NOTTERMINAL() { return getToken(GrammarParser.NOTTERMINAL, 0); }
		public NottermsContext notterms() {
			return getRuleContext(NottermsContext.class,0);
		}
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(GRAMMARWORD);
			setState(27);
			((StartContext)_localctx).CLASS_NAME = match(CLASS_NAME);
			setState(28);
			((StartContext)_localctx).NOTTERMINAL = match(NOTTERMINAL);
			setState(29);
			((StartContext)_localctx).notterms = notterms();
			setState(30);
			((StartContext)_localctx).terms = terms();
			 ((StartContext)_localctx).parsedGrammar =  new ParsedGrammar((((StartContext)_localctx).NOTTERMINAL!=null?((StartContext)_localctx).NOTTERMINAL.getText():null), (((StartContext)_localctx).CLASS_NAME!=null?((StartContext)_localctx).CLASS_NAME.getText():null), ((StartContext)_localctx).notterms.notTerminals, ((StartContext)_localctx).terms.terminals); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermsContext extends ParserRuleContext {
		public List<Terminal> terminals;
		public TermContext term;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TermsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTerms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTerms(this);
		}
	}

	public final TermsContext terms() throws RecognitionException {
		TermsContext _localctx = new TermsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_terms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			((TermsContext)_localctx).term = term();
			 ((TermsContext)_localctx).terminals =  new ArrayList<>(); 
			 _localctx.terminals.add(((TermsContext)_localctx).term.val);      
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TERMINAL) {
				{
				{
				setState(36);
				((TermsContext)_localctx).term = term();
				 _localctx.terminals.add(((TermsContext)_localctx).term.val);      
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Terminal val;
		public Token TERMINAL;
		public Token STRING;
		public TerminalNode TERMINAL() { return getToken(GrammarParser.TERMINAL, 0); }
		public TerminalNode COLON() { return getToken(GrammarParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(GrammarParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((TermContext)_localctx).TERMINAL = match(TERMINAL);
			setState(45);
			match(COLON);
			setState(46);
			((TermContext)_localctx).STRING = match(STRING);
			setState(47);
			match(SEMICOLON);
			 ((TermContext)_localctx).val =  new Terminal((((TermContext)_localctx).TERMINAL!=null?((TermContext)_localctx).TERMINAL.getText():null), (((TermContext)_localctx).STRING!=null?((TermContext)_localctx).STRING.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NottermsContext extends ParserRuleContext {
		public List<NotTerminal> notTerminals;
		public NottermContext notterm;
		public List<NottermContext> notterm() {
			return getRuleContexts(NottermContext.class);
		}
		public NottermContext notterm(int i) {
			return getRuleContext(NottermContext.class,i);
		}
		public NottermsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notterms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNotterms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNotterms(this);
		}
	}

	public final NottermsContext notterms() throws RecognitionException {
		NottermsContext _localctx = new NottermsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_notterms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((NottermsContext)_localctx).notterm = notterm();
			 ((NottermsContext)_localctx).notTerminals =  new ArrayList<>(); 
			 _localctx.notTerminals.add(((NottermsContext)_localctx).notterm.notTerminal);   
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NOTTERMINAL) {
				{
				{
				setState(53);
				((NottermsContext)_localctx).notterm = notterm();
				 _localctx.notTerminals.add(((NottermsContext)_localctx).notterm.notTerminal);   
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NottermContext extends ParserRuleContext {
		public NotTerminal notTerminal;
		public Token NOTTERMINAL;
		public ProductionsCommonContext productionsCommon;
		public ArgumentContext argument;
		public ArgumentsContext arguments;
		public TerminalNode NOTTERMINAL() { return getToken(GrammarParser.NOTTERMINAL, 0); }
		public ProductionsCommonContext productionsCommon() {
			return getRuleContext(ProductionsCommonContext.class,0);
		}
		public TerminalNode RETURNS() { return getToken(GrammarParser.RETURNS, 0); }
		public List<TerminalNode> LSBRACKET() { return getTokens(GrammarParser.LSBRACKET); }
		public TerminalNode LSBRACKET(int i) {
			return getToken(GrammarParser.LSBRACKET, i);
		}
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public List<TerminalNode> RSBRACKET() { return getTokens(GrammarParser.RSBRACKET); }
		public TerminalNode RSBRACKET(int i) {
			return getToken(GrammarParser.RSBRACKET, i);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public NottermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notterm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNotterm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNotterm(this);
		}
	}

	public final NottermContext notterm() throws RecognitionException {
		NottermContext _localctx = new NottermContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_notterm);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				((NottermContext)_localctx).NOTTERMINAL = match(NOTTERMINAL);
				setState(62);
				((NottermContext)_localctx).productionsCommon = productionsCommon();
				 ((NottermContext)_localctx).notTerminal =  new NotTerminal((((NottermContext)_localctx).NOTTERMINAL!=null?((NottermContext)_localctx).NOTTERMINAL.getText():null), ((NottermContext)_localctx).productionsCommon.productionsList); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				((NottermContext)_localctx).NOTTERMINAL = match(NOTTERMINAL);
				setState(66);
				match(RETURNS);
				setState(67);
				match(LSBRACKET);
				setState(68);
				((NottermContext)_localctx).argument = argument();
				setState(69);
				match(RSBRACKET);
				setState(70);
				((NottermContext)_localctx).productionsCommon = productionsCommon();
				 ((NottermContext)_localctx).notTerminal =  new NotTerminal((((NottermContext)_localctx).NOTTERMINAL!=null?((NottermContext)_localctx).NOTTERMINAL.getText():null), ((NottermContext)_localctx).productionsCommon.productionsList, ((NottermContext)_localctx).argument.val); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				((NottermContext)_localctx).NOTTERMINAL = match(NOTTERMINAL);
				setState(74);
				match(LSBRACKET);
				setState(75);
				((NottermContext)_localctx).arguments = arguments();
				setState(76);
				match(RSBRACKET);
				setState(77);
				((NottermContext)_localctx).productionsCommon = productionsCommon();
				 ((NottermContext)_localctx).notTerminal =  new NotTerminal((((NottermContext)_localctx).NOTTERMINAL!=null?((NottermContext)_localctx).NOTTERMINAL.getText():null), ((NottermContext)_localctx).productionsCommon.productionsList, ((NottermContext)_localctx).arguments.vals); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				((NottermContext)_localctx).NOTTERMINAL = match(NOTTERMINAL);
				setState(81);
				match(LSBRACKET);
				setState(82);
				((NottermContext)_localctx).arguments = arguments();
				setState(83);
				match(RSBRACKET);
				setState(84);
				match(RETURNS);
				setState(85);
				match(LSBRACKET);
				setState(86);
				((NottermContext)_localctx).argument = argument();
				setState(87);
				match(RSBRACKET);
				setState(88);
				((NottermContext)_localctx).productionsCommon = productionsCommon();
				 ((NottermContext)_localctx).notTerminal =  new NotTerminal((((NottermContext)_localctx).NOTTERMINAL!=null?((NottermContext)_localctx).NOTTERMINAL.getText():null), ((NottermContext)_localctx).productionsCommon.productionsList, ((NottermContext)_localctx).arguments.vals, ((NottermContext)_localctx).argument.val); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public List<Argument> vals;
		public ArgumentContext argument;
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarParser.COMMA, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArguments(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arguments);
		int _la;
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOTTERMINAL:
			case CLASS_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				((ArgumentsContext)_localctx).argument = argument();
				 ((ArgumentsContext)_localctx).vals =  new ArrayList<>(); 
				 _localctx.vals.add(((ArgumentsContext)_localctx).argument.val); 
				}
				break;
			case RSBRACKET:
			case COMMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(97);
					match(COMMA);
					setState(98);
					((ArgumentsContext)_localctx).argument = argument();
					 _localctx.vals.add(((ArgumentsContext)_localctx).argument.val); 
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public Argument val;
		public TypeContext type;
		public Token NOTTERMINAL;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NOTTERMINAL() { return getToken(GrammarParser.NOTTERMINAL, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArgument(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			((ArgumentContext)_localctx).type = type();
			setState(109);
			((ArgumentContext)_localctx).NOTTERMINAL = match(NOTTERMINAL);
			 ((ArgumentContext)_localctx).val =  new Argument(((ArgumentContext)_localctx).type.t, (((ArgumentContext)_localctx).NOTTERMINAL!=null?((ArgumentContext)_localctx).NOTTERMINAL.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public String t;
		public Token CLASS_NAME;
		public Token NOTTERMINAL;
		public TerminalNode CLASS_NAME() { return getToken(GrammarParser.CLASS_NAME, 0); }
		public TerminalNode NOTTERMINAL() { return getToken(GrammarParser.NOTTERMINAL, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				((TypeContext)_localctx).CLASS_NAME = match(CLASS_NAME);
				 ((TypeContext)_localctx).t =  (((TypeContext)_localctx).CLASS_NAME!=null?((TypeContext)_localctx).CLASS_NAME.getText():null); 
				}
				break;
			case NOTTERMINAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				((TypeContext)_localctx).NOTTERMINAL = match(NOTTERMINAL);
				 ((TypeContext)_localctx).t =  (((TypeContext)_localctx).NOTTERMINAL!=null?((TypeContext)_localctx).NOTTERMINAL.getText():null); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductionsCommonContext extends ParserRuleContext {
		public List<Production> productionsList;
		public ProductionsContext productions;
		public TerminalNode COLON() { return getToken(GrammarParser.COLON, 0); }
		public ProductionsContext productions() {
			return getRuleContext(ProductionsContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public ProductionsCommonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_productionsCommon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProductionsCommon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProductionsCommon(this);
		}
	}

	public final ProductionsCommonContext productionsCommon() throws RecognitionException {
		ProductionsCommonContext _localctx = new ProductionsCommonContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_productionsCommon);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(COLON);
			setState(119);
			((ProductionsCommonContext)_localctx).productions = productions();
			setState(120);
			match(SEMICOLON);
			 ((ProductionsCommonContext)_localctx).productionsList =  ((ProductionsCommonContext)_localctx).productions.productionsList; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductionsContext extends ParserRuleContext {
		public List<Production> productionsList;
		public ProductionContext production;
		public List<ProductionContext> production() {
			return getRuleContexts(ProductionContext.class);
		}
		public ProductionContext production(int i) {
			return getRuleContext(ProductionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(GrammarParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(GrammarParser.OR, i);
		}
		public ProductionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_productions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProductions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProductions(this);
		}
	}

	public final ProductionsContext productions() throws RecognitionException {
		ProductionsContext _localctx = new ProductionsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_productions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			((ProductionsContext)_localctx).production = production();
			 ((ProductionsContext)_localctx).productionsList =  new ArrayList<>();  
			 _localctx.productionsList.add(((ProductionsContext)_localctx).production.val);       
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(126);
				match(OR);
				setState(127);
				((ProductionsContext)_localctx).production = production();
				 _localctx.productionsList.add(((ProductionsContext)_localctx).production.val); 
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductionContext extends ParserRuleContext {
		public Production val;
		public TokenssContext tokenss;
		public TokenssContext tokenss() {
			return getRuleContext(TokenssContext.class,0);
		}
		public ProductionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_production; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProduction(this);
		}
	}

	public final ProductionContext production() throws RecognitionException {
		ProductionContext _localctx = new ProductionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_production);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			((ProductionContext)_localctx).tokenss = tokenss();
			 ((ProductionContext)_localctx).val =  new Production(((ProductionContext)_localctx).tokenss.tokenList); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokenssContext extends ParserRuleContext {
		public List<MyToken> tokenList;
		public TokenContext token;
		public List<TokenContext> token() {
			return getRuleContexts(TokenContext.class);
		}
		public TokenContext token(int i) {
			return getRuleContext(TokenContext.class,i);
		}
		public TokenssContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokenss; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTokenss(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTokenss(this);
		}
	}

	public final TokenssContext tokenss() throws RecognitionException {
		TokenssContext _localctx = new TokenssContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tokenss);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			((TokenssContext)_localctx).token = token();
			 ((TokenssContext)_localctx).tokenList =  new ArrayList<>();   
			 _localctx.tokenList.add(((TokenssContext)_localctx).token.val);       
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TERMINAL) | (1L << NOTTERMINAL) | (1L << JAVA_CODE))) != 0)) {
				{
				{
				setState(141);
				((TokenssContext)_localctx).token = token();
				 _localctx.tokenList.add(((TokenssContext)_localctx).token.val);       
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
